--- a/index.css
+++ b/index.css
@@ -1,96 +1,218 @@
 body {
-    font-size:16px;
-    margin:0;
+    color: #2b283a;
     font-family: 'Roboto', sans-serif;
-    color:#2b283a
+    margin: 0;
 }
-/* text */
-h1, h3 {
-    margin:0;
+
+/* ----- TYPOGRAPHY ----- */
+
+h1, 
+h3 {
+    margin: 0;
 }
-h1{
-    color:white;
-    font-size:36px;
+
+h1 {
+    color: whitesmoke;
+    font-size: 1.75rem;
 }
 
 h2 {
-   margin-top:0;
+    color: #451c7a;
+    font-size: 1.375rem;
+    margin-top: 0;
+}
 
+h3 {
+    font-size: 1.25rem;
 }
-h3{
-    color:#d0aaff;
-    font-size: 20px;
-}
+
 p {
-    line-height: 23px;
+    line-height: 1.5;
 }
 
-/*links*/
+.subheading {
+    display: block;
+    font-size: 1rem;
+    color: #d0aaff;
+}
+
+.section-two h2 {
+    color: inherit;
+}
+
+/* ----- LINKS ----- */
+
 a {
     color: #ef5839;
-    text-decoration: underline dotted;
-}
-a:active, a:hover{
-    color:#d4b44c;
+    text-decoration: underline dotted; 
 }
 
-/* layout*/
-header, section, footer {
-    padding:45px 0;
+a:hover, 
+a:active {
+    color: #d4b44c;
 }
 
-header, .section-two {
-    background-color: #5f29a3;
-}
-
-footer {
-    color:#5f29a3;
+.btn {
+    font-size: 1.125rem;
     text-align: center;
+    font-weight: 500;
+    text-decoration: none;
+    display: block;
+    padding: 0.5em 1em;
+    margin-bottom: 1em;
+    border-radius: 4.6px;
+}
+
+.btn-dark {
+    color: whitesmoke;
+    background: #5f29a3;
+}
+
+.btn-mid {
+    color: #5f29a3; 
+    background: #f0e0ff; 
+}
+
+.btn-light {
+    color: #5f29a3; 
+    background: whitesmoke;
+}
+
+.btn:hover, 
+.btn:active {
+    color: #2b238a;
+    background-color: #f3e885;
+}
+
+/* ----- LAYOUT ----- */
+
+header, 
+section, 
+footer {
+    padding: 1.25em 0;
+}
+
+header, 
+.section-two {
+    background-color: #5f29a3;
 }
 
 .section-two {
     color: whitesmoke;
 }
 
-.main-image {
-    width:100%;
-}
-.secondary-image {
-    width:300px;
-    border-radius:4.6px;
-}
 .container {
-    width:620px;
-    margin:0 auto;
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
 }
-.images{
-    display:flex;
-    justify-content: space-between;
+
+.main-image {
+    width: 100%;
+    display: block;
+    max-width: 640px;
+    margin: 0 auto 2em;
 }
-.btn{
-    padding: 10px 19px;
+
+/*
+  Challenge: Wrap the feature-item divs with flexbox
+    1. Each .feature-item should grow from an initial main size of 220px
+    2. Allow the items inside .section-two-image-container to
+       wrap onto multiple lines
+    3. Apply a gap between each .feature-item
+*/
+
+.section-two-image-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.feature-image {
+    width: 100%;
     border-radius: 4.6px;
-    font-weight: 500;
+}
+
+.feature-item {
+    flex: 1 260px;
+}
+
+footer {
+    text-align: center;
+    color: #5f29a3;
+}
+
+/* ----- NAVIGATION ----- */
+
+nav a {
+    color: #fff;
     text-decoration: none;
-    display:inline-block;  
+    font-size: 1.125rem;
+    padding: 0.85em 0;
+    display: block;
 }
 
-.btn:hover,
-.btn:active {
-    background-color: #f3e885;
-    color:#2b283a;
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
 
-.btn-dark {
-    background-color: #5f29a3;
-    color:whitesmoke;
+/* ----- MEDIA QUERIES ----- */
+
+@media (max-width: 767px) {
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-top: 1.5em;
+    }
+ 
+    li:not(:last-child) {
+        border-bottom: 1px dotted #a190b6;
+    }  
 }
 
-.btn-mid{
-    background-color: #f0e0ff;
-    color:#5f29a3;
-}
-.btn-light{
-    background-color: whitesmoke;
-    color:#5f29a3;
+@media (min-width: 768px) {
+    header,
+    section,
+    footer {
+        padding: 2.875em 0;        
+    }
+    
+    header .container,
+    nav ul {
+        display: flex;
+    }
+    
+    header .container {
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    nav li {
+        margin-left: 1.25em;
+    }
+    
+    .btn {
+        display: inline-block;
+        margin-right: 0.5em;
+    }
+    
+    h1 {
+        font-size: 2.25rem;
+    }
+    
+    h2 {
+        font-size: 1.75rem;
+    }
+    
+    .subheading {
+        font-size: 1.25rem;
+    }
+    
+    p {
+        font-size: 1.125rem;
+    }
 }
